--- a/README
+++ b/README
@@ -25,4 +25,4 @@ Les bonus permettant à pacman de devenir invincible son fonctionnel, mais nous 
 
 
 [Graphismes]
-Nous sommes restés sobres pour les graphiqmes du menu, il est fonctionnel et c'est ce qui nous intéresse, de plus, nous nous sommes concentrés sur une taille de fenêtre précise: 675*525 pixels pour avoir des cases de 25*25 pixels et donc faire des jolis sprites, qui ne s'adapteraient pas à une taille de fenêtre différente /// A TOI DE JOUER
+Nous sommes restés sobres pour les graphiqmes du menu, il est fonctionnel et c'est ce qui nous intéresse, de plus, nous nous sommes concentrés sur une taille de fenêtre précise: 675*525 pixels pour avoir des cases de 25*25 pixels et donc faire des jolis sprites, qui ne s'adapteraient pas à une taille de fenêtre différente.
